dist_man1_MANS=

if BUILD_CARPINCHOD
  dist_man1_MANS+=carpinchod.1
endif

if ENABLE_QT
  dist_man1_MANS+=carpincho-qt.1
endif

if BUILD_CARPINCHO_CLI
  dist_man1_MANS+=carpincho-cli.1
endif

if BUILD_CARPINCHO_TX
  dist_man1_MANS+=carpincho-tx.1
endif

if ENABLE_WALLET
if BUILD_CARPINCHO_WALLET
  dist_man1_MANS+=carpincho-wallet.1
endif
endif
